<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="mediathek">Медиатека</string>
    <string name="night_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="email" translatable="false">beresin.m@googlemail.com</string>
    <string name="email_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="no_results">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью</string>
    <string name="loading_fail">\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="collection">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="artwork">Обложка</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorite_tracks_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали ни одного плейлиста</string>
    <string name="playlist_new">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_desc">Описание</string>
    <string name="playlist_creat_confirm">Завершить создание плейлиста?</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="loss_data">Все несохраненные данные будут потеряны</string>
    <string name="rationale_permission">Разрешение на доступ к файлам необходим для выбора обложки альбома.</string>
    <string name="denied_permanently_permission">Разрешение на доступ к файлам запрещено. Для включения разрешения необходимо перейти в настройки.</string>
    <string name="playlists_folder_name">playlists</string>
    <string name="playlist_cover_filename_part">playlist_cover_</string>
    <string name="retry">Повторите попытку</string>
    <string name="playlist_saved_success">Плейлист %s создан</string>
    <string name="track_add">"Добавлено в плейлист %s"</string>
    <string name="track_exists_by_playlist">"Трек уже добавлен в плейлист %s"</string>
    <string name="bottom_sheet_title">Добавить в плейлист</string>
    <string name="create_playlist">Создать</string>
    <string name="save_playlist">Сохранить</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="playlist_updated_success">Плейлист %s сохранён</string>
    <string name="playlist_tracks_empty">В плейлисте нет треков</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="question_delete_playlist">Хотите удалить плейлист?</string>
    <string name="delete">Удалить</string>
    <string name="delete_track">Удалить трек</string>
    <string name="question_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="no_tracks_by_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="close">Закрыть</string>

    <plurals name="track_count">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

</resources>