<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
    android:paddingTop="14dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_big"/>

    <Button
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/white"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/search"
        app:iconTint="@color/icon_main"
        app:iconPadding="@dimen/icon_main_padding"
        app:iconGravity="textStart"
        android:text="@string/search"
        android:textColor="@color/text"
        android:textAllCaps="false"
        android:textSize="@dimen/text_big"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/media_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/white"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/mediathek"
        app:iconTint="@color/icon_main"
        app:iconPadding="@dimen/icon_main_padding"
        app:iconGravity="textStart"
        android:text="@string/mediathek"
        android:textColor="@color/text"
        android:textAllCaps="false"
        android:textSize="@dimen/text_big"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/settings"
        app:iconTint="@color/icon_main"
        app:iconPadding="@dimen/icon_main_padding"
        app:iconGravity="textStart"
        android:text="@string/settings"
        android:textColor="@color/text"
        android:textAllCaps="false"
        android:textSize="@dimen/text_big"
        android:foreground="?attr/selectableItemBackground"/>

</LinearLayout>