<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settings_background"
    android:paddingTop="14dp"
    android:paddingLeft="@dimen/paddingHorizontal"
    android:paddingRight="@dimen/paddingHorizontal"
    android:paddingBottom="16dp"
    tools:context=".ui.settings.fragments.SettingsFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/settings"
        android:backgroundTint="@color/settings_background"
        app:titleTextColor="@color/text_settings"
        app:titleTextAppearance="@style/toolbar_text"
        />

    <FrameLayout
        android:layout_marginTop="40dp"
        style="@style/frame_layout_settings">
        <TextView
            android:text="@string/night_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/text_settings_margin_start"
            style="@style/text_settings"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:minWidth="48dp"
            android:minHeight="48dp"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            app:thumbTint="@color/switch_thumb"
            app:trackTint="@color/switch_track"/>
    </FrameLayout>
    <FrameLayout
        style="@style/frame_layout_settings">
        <TextView
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/text_settings_margin_start"
            style="@style/text_settings"/>

        <ImageView
            android:id="@+id/img_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            style="@style/img_settings"/>
    </FrameLayout>
    <FrameLayout
        style="@style/frame_layout_settings">
        <TextView
            android:text="@string/support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/text_settings_margin_start"
            style="@style/text_settings"/>

        <ImageView
            android:id="@+id/img_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            style="@style/img_settings"/>
    </FrameLayout>
    <FrameLayout
        style="@style/frame_layout_settings">
        <TextView
            android:text="@string/user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/text_settings_margin_start"
            style="@style/text_settings"/>

        <ImageView
            android:id="@+id/img_terms_of_use"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/arrowforward"
            style="@style/img_settings"/>
    </FrameLayout>

</LinearLayout>