<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settings_background"
    android:paddingTop="14dp"
    android:paddingLeft="@dimen/paddingHorizontal"
    android:paddingRight="@dimen/paddingHorizontal"
    android:paddingBottom="16dp">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/settings"
        android:backgroundTint="@color/settings_background"
        app:navigationIcon="@drawable/arrowback" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:textColor="@color/text"
            android:text="@string/night_theme"
            android:textSize="@dimen/text_medium"
            android:layout_marginStart="@dimen/text_settings_margin_start"
            />

        <Switch
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:minWidth="48dp"
            android:minHeight="48dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:textColor="@color/text"
            android:text="@string/share"
            android:textSize="@dimen/text_medium"
            android:layout_marginStart="@dimen/text_settings_margin_start"
            />

        <ImageView
            android:id="@+id/imgage_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/icon_settings_margin_end"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:textColor="@color/text"
            android:text="@string/support"
            android:textSize="@dimen/text_medium"
            android:layout_marginStart="@dimen/text_settings_margin_start"
            />

        <ImageView
            android:id="@+id/imgage_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/icon_settings_margin_end"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:textColor="@color/text"
            android:text="@string/user_agreement"
            android:textSize="@dimen/text_medium"
            android:layout_marginStart="@dimen/text_settings_margin_start"
            />

        <ImageView
            android:id="@+id/imgage_terms_of_use"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/icon_settings_margin_end"
            android:src="@drawable/arrowforward" />
    </FrameLayout>

</LinearLayout>