<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/player_background"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.player.activity.PlayerActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/settings_background"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/arrowback"
            app:titleTextAppearance="@style/toolbar_text"
            app:titleTextColor="@color/text_settings" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeftData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRightData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/imageViewArtwork"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="46dp"
            android:contentDescription="@string/artwork"
            android:src="@drawable/placeholder"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/textViewTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/player_value_text"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/imageViewArtwork"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/textViewArtistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/player_value_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/textViewTrackName"
            tools:text="The Beatles" />

        <ImageButton
            android:id="@+id/buttonAddTrack"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:elevation="0dp"
            android:backgroundTint="@color/player_add_button_bg"
            android:src="@drawable/add"
            android:background="@drawable/round_button"
            app:layout_constraintBottom_toBottomOf="@id/buttonPlayTrack"
            app:layout_constraintEnd_toStartOf="@id/buttonPlayTrack"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@id/buttonPlayTrack"/>

        <ImageButton
            android:id="@+id/buttonLikeTrack"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:elevation="0dp"
            android:backgroundTint="@color/player_like_button_bg"
            android:src="@drawable/like"
            android:background="@drawable/round_button"
            app:layout_constraintBottom_toBottomOf="@id/buttonPlayTrack"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/buttonPlayTrack"
            app:layout_constraintTop_toTopOf="@id/buttonPlayTrack"/>

        <ImageButton
            android:id="@+id/buttonPlayTrack"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="34dp"
            android:elevation="0dp"
            android:backgroundTint="@color/player_play_button_bg"
            android:src="@drawable/play"
            android:background="@drawable/round_button"
            app:layout_constraintEnd_toStartOf="@id/buttonLikeTrack"
            app:layout_constraintStart_toEndOf="@id/buttonAddTrack"
            app:layout_constraintTop_toBottomOf="@id/textViewArtistName"/>

        <TextView
            android:id="@+id/textViewTimeRemained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="00:00"
            android:textColor="@color/player_value_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/buttonPlayTrack"
            tools:text="00:00" />

        <TextView
            android:id="@+id/textViewDurationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            style="@style/player_label_text"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@id/guidelineLeftData"
            app:layout_constraintTop_toBottomOf="@id/textViewTimeRemained" />

        <TextView
            android:id="@+id/textViewDurationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/player_value_text"
            app:layout_constraintEnd_toStartOf="@id/guidelineRightData"
            app:layout_constraintTop_toTopOf="@id/textViewDurationLabel"
            tools:text="5:35" />

        <TextView
            android:id="@+id/textViewAlbumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            style="@style/player_label_text"
            android:text="@string/collection"
            app:layout_constraintStart_toStartOf="@id/guidelineLeftData"
            app:layout_constraintTop_toBottomOf="@id/textViewDurationLabel" />

        <TextView
            android:id="@+id/textViewAlbumValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/player_value_text"
            app:layout_constraintEnd_toStartOf="@id/guidelineRightData"
            app:layout_constraintTop_toTopOf="@id/textViewAlbumLabel"
            tools:text="Yesterday (Remained 2009)" />

        <TextView
            android:id="@+id/textViewYearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            style="@style/player_label_text"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@id/guidelineLeftData"
            app:layout_constraintTop_toBottomOf="@id/textViewAlbumLabel" />

        <TextView
            android:id="@+id/textViewYearValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/player_value_text"
            app:layout_constraintEnd_toStartOf="@id/guidelineRightData"
            app:layout_constraintTop_toTopOf="@id/textViewYearLabel"
            tools:text="1965" />

        <TextView
            android:id="@+id/textViewGenreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            style="@style/player_label_text"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@id/guidelineLeftData"
            app:layout_constraintTop_toBottomOf="@id/textViewYearLabel" />

        <TextView
            android:id="@+id/textViewGenreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/player_value_text"
            app:layout_constraintEnd_toStartOf="@id/guidelineRightData"
            app:layout_constraintTop_toTopOf="@id/textViewGenreLabel"
            tools:text="Rock" />

        <TextView
            android:id="@+id/textViewCountryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            style="@style/player_label_text"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="@id/guidelineLeftData"
            app:layout_constraintTop_toBottomOf="@id/textViewGenreLabel" />

        <TextView
            android:id="@+id/textViewCountryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/player_value_text"
            app:layout_constraintEnd_toStartOf="@id/guidelineRightData"
            app:layout_constraintTop_toTopOf="@id/textViewCountryLabel"
            tools:text="Великобритания" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

